# 3D-Reconstruction-Triangulation

./: .gitignore  CMakeLists.txt  Camera.h  Dron1_label.ply  Dron1_label_2k.ply  Dron2_label_2k.ply  PointProjector.h  PointTriangulator.h  README.md  a.out  cameraDataConverter.py  convert_xcp.py  dron1.ply  dron1_.ply  dron1_10k.ply  dron1_2k.ply  dron2.ply  dron2_.ply  dron2_10k.ply  dron2_2k.ply  labels.csv  main.cpp  main.py  okej.cpp  old.cpp  old.java  reconstruction3D.cpp  visualization.blend  visualization.py
Dron1Dron2LotDowolny/: cameras.xml
Dron1Dron2LotDowolny/referenceBB/: Dron1Dron2LotdowolnyT01.55260362.20230116152406.csv  Dron1Dron2LotdowolnyT01.56339527.20230116152406.csv  Dron1Dron2LotdowolnyT01.60881257.20230116152406.csv  Dron1Dron2LotdowolnyT01.61016180.20230116152406.csv
DwaDronyiGoPro/referenceBB/: 2DronyiGoPro T01.55260362.20220117151746.csv  2DronyiGoPro T01.61016180.20220117151746.csv
data_one_drone/: cameras.xml  labels.csv  visualization.blend
data_two_drones/: cameras.xml
data_two_drones/referenceBB/: 2DronyiGoPro T01.60881257.20220117151746.csv  2DronyiGoPro T01.61920488.20220117151746.csv
data_two_drones_20230110/referenceBB/: Dron1Dron2LotdowolnyT01.55260362.20230116152406.csv  Dron1Dron2LotdowolnyT01.56339527.20230116152406.csv  Dron1Dron2LotdowolnyT01.60881257.20230116152406.csv  Dron1Dron2LotdowolnyT01.61016180.20230116152406.csv
dataset/R02_D1/: R02_D1.csv  stationary_camera_data.csv
dataset/R02_D1/dl_data/: 55260362.csv  60881257.csv  61016180.csv  61920488.csv
dataset/R04_D2/dl_data/: 55260362.csv  56339527.csv  60881257.csv  61016180.csv
dataset/R12_D4/: R12_D4.xcp
dataset/R12_D4/dl_data/: 55260362.csv  56339527.csv  60881257.csv  61016180.csv
dataset/R13_D3/: R13_D3.xcp
dataset/R13_D3/dl_data/: 55260362.csv  56339527.csv  60881257.csv  61016180.csv
dataset/S01_D2_A/: stationary_camera_data.csv
dataset/S01_D2_A/dl_data/: cam1i_s.csv  cam2i_s.csv  cam3i_s.csv  cam4i_s.csv  cam5i_s.csv  cam6i_s.csv  cam7i_s.csv  cam8i_s.csv
dataset/S01_D2_A/drone_data/: dron1_100.csv  dron1_cam_25.csv  dron1_pos_25.csv  dron2_100.csv  dron2_cam_25.csv  (+3 more)
dataset/S02_D4_A/: markersAruco.csv  stationary_camera_data.csv
dataset/S09_D6/: stationary_camera_data.csv
lab_14/: cameras.xml
lab_14/referenceBB/: cam1i_s.csv  cam2i_s.csv  cam3i_s.csv  cam4i_s.csv  cam5i_s.csv  cam6i_s.csv  cam7i_s.csv  cam8i_s.csv
results/: crosscenter.ply  dronecenter.ply  rays_result.ply
src/: Camera.h  CameraCalibrator.cpp  CameraCalibrator.h  DetectionsContainer.cpp  DetectionsContainer.h  DronClassifier.cpp  DronClassifier.h  DronClassifier2.cpp  DronClassifier2.h  DroneClassifier.cpp  DroneClassifier.h  DroneClassifier2.cpp  DroneClassifier2.h  HasiecTriangulator.cpp  HasiecTriangulator.h  MatrixTriangulator.cpp  MatrixTriangulator.h  PointTriangulator.h  RayTriangulator.cpp  RayTriangulator.h  Triangulator.cpp  Triangulator.h  generate_xcp.cpp  happly.h  main.cpp  pugixml.cpp  test.cpp  test_airsim.cpp  utils.cpp  utils.h
(+44 files in other folders)
